@@ -2,7 +2,7 @@ Package: OPI
 Type: Package
 Title: Open Perimetry Interface
 Version: 2.5
-Date: 2016-2-25
+Date: 2016-5-30
 Author: Andrew Turpin, David Lawson, Matthias Muller
 Maintainer: Andrew Turpin <aturpin@unimelb.edu.au>
 Description: Implementation of the Open Perimetry Interface (OPI) for simulating and controlling visual field machines using R. The OPI is a standard for interfacing with visual field testing machines (perimeters). It specifies basic functions that allow many visual field tests to be constructed. As of February 2016 it is fully implemented on the Octopus 600 and Octopus 900 and partially on the Heidelberg Edge Perimeter, the Kowa AP 7000 and the CrewT imo. It also has a cousin: the R package visualFields, which has tools for analysing and manipulating visual field data.
