@@ -70,7 +70,7 @@ opiInitialise(...)
     \code{display} and \code{maxStim} is as for SimHenson.
 }
 \subsection{Octopus900}{
-    \code{opiInitialize(eyeSuiteSettingsLocation, eye, gazeFeed=0, bigWheel=FALSE),buzzer=0}
+    \code{opiInitialize(eyeSuiteSettingsLocation, eye, gazeFeed=0, bigWheel=FALSE,pres_buzzer=0, resp_buzzer=0)}
 
     If the chosen OPI implementation is \code{Octopus900}, then you must 
     specify a directory and the eye to be tested.
@@ -96,8 +96,10 @@ opiInitialise(...)
     The mapping from size to 'hole on wheel' is hard coded; see code for
     details.
 
-    \code{buzzer} is the buzzer volume which can be one 
-     of 0 (no buzzer), 1, 2, or 3 (max volume). The buzzer sounds before each presentation.
+    If \code{pres_buzzer} is greater than zero, a buzzer will sound with each stimuli presented.
+    If \code{resp_buzzer} is greater than zero, a buzzer will sound with each button press (resposne).
+    The volume can be one of 0 (no buzzer), 1, 2, or 3 (max volume). If both buzzers are more than zero, 
+    the maximum of the two will be used as the volume.
 }
 \subsection{Octopus600}{
     \code{opiInitialize(ipAddress, eye, pupilTracking=FALSE, pulsar=FALSE, eyeControl=0)}
