@@ -93,3 +93,4 @@ OPI 2.4
 
 OPI 2.5
  - added imo
+ - added different types of buzzer for Octopus 900
